--- a/trace-bmc.template
+++ b/trace-bmc.template
@@ -1,5 +1,5 @@
 set input_file $INPUT
 go_bmc
-check_ltlspec_bmc -P $PROPNAME -k $MAXLEN
+check_ltlspec_klive -P $PROPNAME
 show_traces -o $OUTPUT -p 4
 quit
